General fixes & user-post relationships.

--- a/lore/templates/login.html
+++ b/lore/templates/login.html
@@ -14,6 +14,9 @@
     {% for error in form.password.errors %}
         {{ error }}
     {% endfor %}
+    <!-- Remember -->
+    {{ form.remember.label }}
+    {{ form.remember }}
     <!-- Submit -->
     {{ form.submit(value=form.submit.label.text) }}
 </form>
