--- a/lore/templates/account.html
+++ b/lore/templates/account.html
@@ -1,15 +1,19 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h2>{{ current_user.username }}</h2>
-    <h3>{{ current_user.email }}</h3>
-    <h2>{{ current_user.first_name }}</h2>
-    <h2>{{ current_user.last_name }}</h2>
+    <!-- Account Information -->
+    <h2>Overview</h2>
+    <p>{{ current_user.username }}</p>
+    <p>{{ current_user.email }}</p>
+    <p>{{ current_user.first_name }}</p>
+    <p>{{ current_user.last_name }}</p>
+    <!-- Posts -->
+    <h2>Posts</h2>
     {% if posts %}
         {% for post in posts %}
-            <h1>{{ post.title }}</h1>
+            <h3>{{ post.title }}</h1>
             <p>{{ post.body }}</p>
         {% endfor %}
     {% else %}
-        <h1>This user has no posts :(</h1>
+        <h3>This user has no posts :(</h3>
     {% endif %}
 {% endblock content %}
