Added logging out user.

--- a/lore/templates/account.html
+++ b/lore/templates/account.html
@@ -6,6 +6,7 @@
     <p>{{ current_user.email }}</p>
     <p>{{ current_user.first_name }}</p>
     <p>{{ current_user.last_name }}</p>
+    <a href="{{ url_for('logout') }}">Logout</a>
     <!-- Posts -->
     <h2>Posts</h2>
     {% if posts %}
