Added posts, profile pages, and following/follower functionality.

--- a/lore/templates/edit_account.html
+++ b/lore/templates/edit_account.html
@@ -30,6 +30,10 @@
             {% for error in form.last_name.errors %}
                 {{ error }}
             {% endfor %}
+            <li>{{ form.about_me }}</li>
+            {% for error in form.about_me.errors %}
+                {{ error }}
+            {% endfor %}
             {{ form.submit }}
         </ul>
     </form>
