--- a/lore/templates/index.html
+++ b/lore/templates/index.html
@@ -1,16 +1,19 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Hello, {{ current_user.username }}</h2>
+    <h1>Hello, {{ current_user.username }}!</h2>
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
             {{ form.body.label }}<br>
             {{ form.body(cols=32, rows=4) }}<br>
             {% for error in form.body.errors %}
-            <span style="color: red;">[{{ error }}]</span>
+            <span style="color: red;">{{ error }}</span>
             {% endfor %}
         </p>
         <p>{{ form.submit() }}</p>
     </form>
-    <h2></h2>
+    <h3>See what the people you follow are talking about.</h3>
+    {% for post in posts %}
+        {% include "_post.html" %}
+    {% endfor %}
 {% endblock content %}
