Improvements to appearance. Fixed bug showing only current_user posts.

--- a/lore/templates/user.html
+++ b/lore/templates/user.html
@@ -3,7 +3,7 @@
 {% block content %}
     <table>
         <tr valign="top">
-            <td><h1>User: {{ user.username }}</h1></td>
+            <td><h1>User: {{ user.username }} ({{user.first_name}}, {{user.last_name}})</h1></td>
             {% if user.last_seen %}<p>Last seen: {{ user.last_seen }}</p>{% endif %}
             <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
             {% if user == current_user %}
