--- a/lore/templates/layout.html
+++ b/lore/templates/layout.html
@@ -9,12 +9,14 @@
     </head>
     <body>
         <div>
-            <b>Lore</b>
-            <a href="{{ url_for('index') }}">Home</a>
             {% if current_user.is_authenticated %}
+                <b>Lore ({{ current_user.username }})</b>
+                <a href="{{ url_for('index') }}">Home</a>
                 <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
                 <a href="{{ url_for('logout') }}">Logout</a>
             {% else %}
+                <b>Lore</b>
+                <a href="{{ url_for('index') }}">Home</a>
                 <a href="{{ url_for('register') }}">Register</a>
                 <a href="{{ url_for('login') }}">Login</a>
             {% endif %}
