--- a/lore/templates/index.html
+++ b/lore/templates/index.html
@@ -2,18 +2,30 @@
 {% block content %}
     <h1>Hello, {{ current_user.username }}!</h2>
     <form action="" method="post">
+        {% if form %}
         {{ form.hidden_tag() }}
-        <p>
-            {{ form.body.label }}<br>
-            {{ form.body(cols=32, rows=4) }}<br>
-            {% for error in form.body.errors %}
-            <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
+            <p>
+                {{ form.body.label }}<br>
+                {{ form.body(cols=32, rows=4) }}<br>
+                {% for error in form.body.errors %}
+                <span style="color: red;">{{ error }}</span>
+                {% endfor %}
+            </p>
+            <p>{{ form.submit() }}</p>
+        {% endif %}
     </form>
-    <h3>See what the people you follow are talking about.</h3>
+    {% if form %}
+        <h3>See what the people you follow are talking about.</h3>
+    {% else %}
+        <h3>Explore what other people are talking about.</h3>
+    {% endif %}
     {% for post in posts %}
         {% include "_post.html" %}
     {% endfor %}
+    {% if prev_url %}
+        <a href="{{ prev_url }}">Newer posts</a>
+    {% endif %}
+    {% if next_url %}
+        <a href="{{ next_url }}">Older posts</a>
+    {% endif %}
 {% endblock content %}
