--- a/lore/templates/layout.html
+++ b/lore/templates/layout.html
@@ -6,22 +6,57 @@
         {% else %}
             <title>Lore</title>
         {% endif %}
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.10/css/uikit.min.css">
     </head>
+    <style>
+        #top-head {
+            z-index: 9;
+            top: 0;
+            left:0;
+            right:0;
+        }
+
+        /* Remove margin top from nav dropdown */
+        #top-head [class*="uk-navbar-dropdown-bottom"] {
+            margin-top: 0;
+        }
+    </style>
     <body>
-        <div>
-            {% if current_user.is_authenticated %}
-                <b>Lore ({{ current_user.username }})</b>
-                <a href="{{ url_for('index') }}">Home</a>
-                <a href="{{ url_for('explore') }}">Explore</a>
-                <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
-                <a href="{{ url_for('logout') }}">Logout</a>
-            {% else %}
-                <b>Lore</b>
-                <a href="{{ url_for('index') }}">Home</a>
-                <a href="{{ url_for('register') }}">Register</a>
-                <a href="{{ url_for('login') }}">Login</a>
-            {% endif %}
-        </div>
+        {% if current_user.is_authenticated %}
+            <header id="top-head" class="uk-position-fixed">
+                <div class="uk-container uk-container-expand uk-background-primary">
+                    <nav class="uk-navbar uk-light" data-uk-navbar="mode:click">
+                        <div class="uk-navbar-left">
+                            <a class="uk-navbar-item uk-logo" href="#">Lore</a>
+                            <ul class="uk-navbar-nav uk-visible@m">
+                                <li class="uk-active"><a href="#">Home</a></li>
+                                <li class="uk-active"><a href="#">Explore</a></li>
+                                <li class="uk-active"><a href="#">Stream</a></li>
+                            </ul>
+                        </div>
+                        <div class="uk-navbar-right">
+                            <ul class="uk-navbar-nav">
+                                <li><a href="{{ url_for('user', username=current_user.username) }}" data-uk-icon="icon:user">{{ current_user.username }}</a></li>
+                                <li><a href="#" data-uk-icon="icon:sign-out"></a></li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+            </header>
+        {% endif %}
         {% block content %}{% endblock %}
+        <!-- FOOT -->
+        {% if current_user.is_authenticated %}
+        <div class="uk-position-bottom-center uk-position-small">
+            <span class="uk-text-small uk-text-center">Created by <a href="https://github.com/mushydev">@mushydev</a></span>
+        </div>
+        {% else %}
+        <div class="uk-position-bottom-center uk-position-small uk-dark">
+            <span class="uk-text-small uk-text-center">Created by <a href="https://github.com/mushydev">@mushydev</a></span>
+        </div>
+        {% endif %}
+        <!-- /FOOT -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.10/js/uikit.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.10/js/uikit-icons.min.js"></script>
     </body>
 </html>
