--- a/lore/templates/login.html
+++ b/lore/templates/login.html
@@ -1,32 +1,52 @@
 {% extends "layout.html" %}
 {% block content %}
-<form method="POST">
-    {{ form.hidden_tag() }}
-    <!-- Username -->
-    <p>
-        {{ form.username.label }}
-        {{ form.username }}
-        {% for error in form.username.errors %}
-            {{ error }}
-        {% endfor %}
-    </p>
-    <!-- Password -->
-    <p>
-        {{ form.password.label }}
-        {{ form.password }}
-        {% for error in form.password.errors %}
-            {{ error }}
-        {% endfor %}
-    </p>
-    <!-- Remember -->
-    <p>
-        {{ form.remember.label }}
-        {{ form.remember }}
-    </p>
-
-    <!-- Submit -->
-    <p>
-        {{ form.submit(value=form.submit.label.text) }}
-    </p>
-</form>
+<div class="uk-flex uk-flex-center uk-flex-middle uk-height-viewport uk-background-repeat uk-background-cover uk-background-secondary" style="background-image: url('static/img/educational-pattern.png')">
+    <div class="uk-width-large uk-padding-small uk-background-muted">
+        <form action="login.html">
+            <fieldset class="uk-fieldset">
+                <legend class="uk-legend uk-text-lead">Lore</legend>
+                <p class="uk-text-muted uk-margin-remove-top">Welcome back!</p>
+                <div class="uk-margin">
+                    <div class="uk-inline uk-width-1-1">
+                        <span class="uk-form-icon uk-form-icon-flip" data-uk-icon="icon: user"></span>
+                        <input class="uk-input uk-form-large" required placeholder="Username" type="text">
+                    </div>
+                </div>
+                <div class="uk-margin">
+                    <div class="uk-inline uk-width-1-1">
+                        <span class="uk-form-icon uk-form-icon-flip" data-uk-icon="icon: lock"></span>
+                        <input class="uk-input uk-form-large" required placeholder="Password" type="password">
+                    </div>
+                </div>
+                
+                <div class="uk-margin">
+                    <label><input class="uk-checkbox" type="checkbox"> Keep me logged in</label>
+                </div>
+                <div class="uk-margin uk-width-1-1">
+                    <button type="submit" class="uk-button uk-button-primary uk-button-primary uk-button-large uk-width-1-1">LOG IN</button>
+                </div>
+            </fieldset>
+        </form>
+        <div>
+            <div class="uk-text-center">
+                <a class="uk-link-reset uk-text-small" data-uk-toggle="target: #recover;animation: uk-animation-slide-top-small">Forgot your password?</a>
+            </div>
+            <div class="uk-margin-small-top" id="recover" hidden>
+                <form action="login.html">
+                    
+                    <div class="uk-margin-small">
+                        <div class="uk-inline uk-width-1-1">
+                            <span class="uk-form-icon uk-form-icon-flip" data-uk-icon="icon: mail"></span>
+                            <input class="uk-input" placeholder="E-mail" required type="text">
+                        </div>
+                    </div>
+                    <div class="uk-margin-small">
+                        <button type="submit" class="uk-button uk-button-primary uk-button-primary uk-width-1-1">SEND PASSWORD</button>
+                    </div>
+                    
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
