--- a/lore/templates/index.html
+++ b/lore/templates/index.html
@@ -22,10 +22,10 @@
     {% for post in posts %}
         {% include "_post.html" %}
     {% endfor %}
-    {% if prev_url %}
-        <a href="{{ prev_url }}">Newer posts</a>
-    {% endif %}
     {% if next_url %}
-        <a href="{{ next_url }}">Older posts</a>
+        <a href="{{ next_url }}"><<</a>
     {% endif %}
+    {% if prev_url %}
+        <a href="{{ prev_url }}">>></a>
+    {% endif %} 
 {% endblock content %}
