--- a/lore/templates/layout.html
+++ b/lore/templates/layout.html
@@ -15,11 +15,6 @@
             left:0;
             right:0;
         }
-
-        /* Remove margin top from nav dropdown */
-        #top-head [class*="uk-navbar-dropdown-bottom"] {
-            margin-top: 0;
-        }
     </style>
     <body>
         {% if current_user.is_authenticated %}
@@ -27,17 +22,29 @@
                 <div class="uk-container uk-container-expand uk-background-primary">
                     <nav class="uk-navbar uk-light" data-uk-navbar="mode:click">
                         <div class="uk-navbar-left">
-                            <a class="uk-navbar-item uk-logo" href="#">Lore</a>
                             <ul class="uk-navbar-nav uk-visible@m">
-                                <li class="uk-active"><a href="#">Home</a></li>
-                                <li class="uk-active"><a href="#">Explore</a></li>
-                                <li class="uk-active"><a href="#">Stream</a></li>
+                                <li class="uk-active uk-margin-right"><a href={{ url_for('index') }}>Lore</a></li>
+                                {% if title == "Home" %}
+                                <li class="uk-active"><a href={{ url_for('index') }}>Home</a></li>
+                                {% else %}
+                                <li><a href={{ url_for('index') }}>Home</a></li>
+                                {% endif %}
+                                {% if title == "Explore" %}
+                                <li class="uk-active"><a href={{ url_for('explore') }}>Explore</a></li>
+                                {% else %}
+                                <li><a href={{ url_for('explore') }}>Explore</a></li>
+                                {% endif %}
+                                {% if title == "Stream" %}
+                                <li class="uk-active"><a href={{ url_for('index') }}>Stream</a></li>
+                                {% else %}
+                                <li><a href={{ url_for('index') }}>Stream</a></li>
+                                {% endif %}
                             </ul>
                         </div>
                         <div class="uk-navbar-right">
                             <ul class="uk-navbar-nav">
-                                <li><a href="{{ url_for('user', username=current_user.username) }}" data-uk-icon="icon:user">{{ current_user.username }}</a></li>
-                                <li><a href="#" data-uk-icon="icon:sign-out"></a></li>
+                                <li><a href="{{ url_for('user', username=current_user.username) }}" data-uk-icon="icon:user"> {{ current_user.username }}</a></li>
+                                <li><a href={{ url_for('logout') }} data-uk-icon="icon:sign-out"></a></li>
                             </ul>
                         </div>
                     </nav>
@@ -46,12 +53,8 @@
         {% endif %}
         {% block content %}{% endblock %}
         <!-- FOOT -->
-        {% if current_user.is_authenticated %}
-        <div class="uk-position-bottom-center uk-position-small">
-            <span class="uk-text-small uk-text-center">Created by <a href="https://github.com/mushydev">@mushydev</a></span>
-        </div>
-        {% else %}
-        <div class="uk-position-bottom-center uk-position-small uk-dark">
+        {% if current_user.anonymous %}
+        <div class="uk-position-bottom-center uk-position-small uk-dark" uk-sticky="top: ">
             <span class="uk-text-small uk-text-center">Created by <a href="https://github.com/mushydev">@mushydev</a></span>
         </div>
         {% endif %}
