--- a/lore/templates/_post.html
+++ b/lore/templates/_post.html
@@ -1,5 +1,4 @@
-<table>
-    <tr valign="top">
-        <td><a href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a> says:<br>{{ post.body }}</td>
-    </tr>
-</table>
+<dl class="uk-description-list">
+    <dt><a href={{ url_for('user', username=post.author.username) }}>{{ post.author.username }}</a></dt>
+    <dd>{{ post.body }}</dd>
+</dl>
