--- a/lore/templates/login.html
+++ b/lore/templates/login.html
@@ -1,52 +1,69 @@
+
 {% extends "layout.html" %}
 {% block content %}
-<div class="uk-flex uk-flex-center uk-flex-middle uk-height-viewport uk-background-repeat uk-background-cover uk-background-secondary" style="background-image: url('static/img/educational-pattern.png')">
-    <div class="uk-width-large uk-padding-small uk-background-muted">
-        <form action="login.html">
-            <fieldset class="uk-fieldset">
-                <legend class="uk-legend uk-text-lead">Lore</legend>
-                <p class="uk-text-muted uk-margin-remove-top">Welcome back!</p>
-                <div class="uk-margin">
-                    <div class="uk-inline uk-width-1-1">
-                        <span class="uk-form-icon uk-form-icon-flip" data-uk-icon="icon: user"></span>
-                        <input class="uk-input uk-form-large" required placeholder="Username" type="text">
-                    </div>
-                </div>
-                <div class="uk-margin">
-                    <div class="uk-inline uk-width-1-1">
-                        <span class="uk-form-icon uk-form-icon-flip" data-uk-icon="icon: lock"></span>
-                        <input class="uk-input uk-form-large" required placeholder="Password" type="password">
-                    </div>
-                </div>
-                
-                <div class="uk-margin">
-                    <label><input class="uk-checkbox" type="checkbox"> Keep me logged in</label>
-                </div>
-                <div class="uk-margin uk-width-1-1">
-                    <button type="submit" class="uk-button uk-button-primary uk-button-primary uk-button-large uk-width-1-1">LOG IN</button>
-                </div>
-            </fieldset>
-        </form>
-        <div>
-            <div class="uk-text-center">
-                <a class="uk-link-reset uk-text-small" data-uk-toggle="target: #recover;animation: uk-animation-slide-top-small">Forgot your password?</a>
-            </div>
-            <div class="uk-margin-small-top" id="recover" hidden>
-                <form action="login.html">
-                    
-                    <div class="uk-margin-small">
-                        <div class="uk-inline uk-width-1-1">
-                            <span class="uk-form-icon uk-form-icon-flip" data-uk-icon="icon: mail"></span>
-                            <input class="uk-input" placeholder="E-mail" required type="text">
+<!-- Login page -->
+<div class="uk-container">
+    <div class="uk-flex uk-flex-center uk-flex-middle" uk-height-viewport="offset-top: true; offset-bottom: 10%;">
+        <div class="uk-card uk-card-default uk-border-rounded uk-background-muted uk-padding-small" uk-scrollspy="cls:uk-animation-slide-bottom-small">
+            <!-- Form -->
+            <form method="POST" action="" class="uk-form-stacked">
+                {{ form.hidden_tag() }}
+                <fieldset class="uk-fieldset">
+                        <div class="uk-card-header">
+                            <legend class="uk-card-title uk-margin-remove-bottom">Login</legend>
+                            <p class="uk-text-meta uk-margin-remove-top">Welcome!</p>
+                        </div>
+                    <div class="uk-card-body">
+                        <!-- Email -->
+                        <div class="uk-margin">
+                            {% if form.username.errors %}
+                                <div class="uk-inline">
+                                    <span class="uk-form-icon uk-form-icon" data-uk-icon="icon: user"></span>
+                                    {% for error in form.username.errors %}
+                                        {{ form.username( **{'class': 'uk-input uk-form-large uk-form-danger', 'placeholder': form.username.label.text, 'uk-tooltip': 'title: ' + error + '; pos: right;'} )}}
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                <div class="uk-inline">
+                                    <span class="uk-form-icon uk-form-icon" data-uk-icon="icon: user"></span>
+                                    {{ form.username( **{'class': 'uk-input uk-form-large', 'placeholder': form.username.label.text} ) }}
+                                </div>
+                            {% endif %}
+                        </div>
+                        <!-- Password -->
+                        <div class="uk-margin">
+                            {% if form.password.errors %}
+                                <div class="uk-inline">
+                                    <span class="uk-form-icon uk-form-icon" data-uk-icon="icon: lock"></span>
+                                    {% for error in form.password.errors %}
+                                        {{ form.password( **{'class': 'uk-input uk-form-large uk-form-danger', 'placeholder': form.password.label.text, 'uk-tooltip': 'title: ' + error + '; pos: right;'} )}}
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                <div class="uk-inline">
+                                    <span class="uk-form-icon uk-form-icon" data-uk-icon="icon: lock"></span>
+                                    {{ form.password( **{'class': 'uk-input uk-form-large', 'placeholder': form.password.label.text} ) }}
+                                </div>
+                            {% endif %}
+                        </div>
+                        <!-- Remember Me -->
+                        <div class="uk-margin">
+                            {{ form.remember( **{'class': 'uk-checkbox uk-margin-small-right', 'type': 'checkbox'} ) }}
+                            {{ form.remember.label() }}
+                        </div>
+                        <div class="uk-margin">
+                            {{ form.submit(class='uk-button uk-button-medium uk-button-primary uk-text-uppercase uk-width-1-1') }}
                         </div>
                     </div>
-                    <div class="uk-margin-small">
-                        <button type="submit" class="uk-button uk-button-primary uk-button-primary uk-width-1-1">SEND PASSWORD</button>
+                    <div class="uk-card-footer">
+                        <!-- Forget -->
+                        <div class="uk-margin uk-text-center">
+                                <span class="uk-text-muted"><small><a href="#">Forgot your password?</a></small></span>
+                        </div>
                     </div>
-                    
-                </form>
-            </div>
+                </fieldset>
+            </form>
         </div>
     </div>
-</div>
-{% endblock %}
+</div>   
+{% endblock content %}
