--- a/lore/templates/register.html
+++ b/lore/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>Login</h1>
+<h1>Register</h1>
 <form method="POST">
     {{ form.hidden_tag() }}
     <!-- Username -->
