--- a/lore/templates/user.html
+++ b/lore/templates/user.html
@@ -1,27 +1,38 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <table>
-        <tr valign="top">
-            <td><h1>User: {{ user.username }} ({{user.first_name}}, {{user.last_name}})</h1></td>
-            {% if user.last_seen %}<p>Last seen: {{ user.last_seen }}</p>{% endif %}
-            <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
-            {% if user == current_user %}
-            <p><a href="{{ url_for('edit_account') }}">Edit your profile</a></p>
-            {% elif not current_user.is_following(user) %}
-            <p><a href="{{ url_for('follow', username=user.username) }}">Follow</a></p>
-            {% else %}
-            <p><a href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a></p>
-            {% endif %}
-        </tr>
-    </table>
-    {% for post in posts %}
-        {% include "_post.html" %}
-    {% endfor %}
-    {% if next_url %}
-        <a href="{{ next_url }}"><<</a>
-    {% endif %}
-    {% if prev_url %}
-        <a href="{{ prev_url }}">>></a>
-    {% endif %}
+    <div class="uk-container">
+        <div class="uk-section uk-section-medium">
+            <div class="uk-container uk-padding">
+                <div>
+                    <div>
+                        <h3>{{ user.username }} ({{user.first_name}}, {{user.last_name}})</h3>
+                        {% if user.last_seen %}<p class="text-lead">Last seen: {{ user.last_seen }}</p>{% endif %}
+                        <p class="uk-margin-remove-top">{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
+                        {% if user == current_user %}
+                        <p class="uk-margin-remove-top"><a href="{{ url_for('edit_account') }}">Edit your profile</a></p>
+                        {% elif not current_user.is_following(user) %}
+                        <p class="uk-margin-remove-top"><a href="{{ url_for('follow', username=user.username) }}">Follow</a></p>
+                        {% else %}
+                        <p class="uk-margin-remove-top"><a href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a></p>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr></hr>
+        <div class="uk-section uk-section-small">
+            <div class="uk-container">
+                {% for post in posts %}
+                {% include "_post.html" %}
+                {% endfor %}
+                {% if next_url %}
+                    <a href="{{ next_url }}"><<</a>
+                {% endif %}
+                {% if prev_url %}
+                    <a href="{{ prev_url }}">>></a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
