--- a/lore/templates/login.html
+++ b/lore/templates/login.html
@@ -11,11 +11,11 @@
                 <fieldset class="uk-fieldset">
                         <div class="uk-card-header">
                             <legend class="uk-card-title uk-margin-remove-bottom">Login</legend>
-                            <p class="uk-text-meta uk-margin-remove-top">Welcome!</p>
+                            <p class="uk-text-meta uk-margin-remove-top">Welcome to Lore!</p>
                         </div>
                     <div class="uk-card-body">
                         <!-- Email -->
-                        <div class="uk-margin">
+                        <div class="uk-margin"> 
                             {% if form.username.errors %}
                                 <div class="uk-inline">
                                     <span class="uk-form-icon uk-form-icon" data-uk-icon="icon: user"></span>
